kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sramota
  labels:
    app: sramota
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sramota
  template:
    metadata:
      labels:
        app: sramota
    spec:
      containers:
        - name: sramota
          image: sramota
          ports:
            - containerPort: 80
