kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sramota-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - sramota.djnd.si
        - sramota.danesjenovdan.si
      secretName: sramota-tls
  rules:
    - host: sramota.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sramota
                port:
                  number: 80
    - host: sramota.danesjenovdan.si
      http: *http_paths
